<resources>
    <string name="app_name">TomTom SDK Examples</string>
    <string name="location_permission_denied">Location permissions denied</string>
    <string name="title_activity_map_demo_detail_host">MapDemoDetailHostActivity</string>
    <string name="title_mapdemo_list">ItemsMapDemos</string>
    <string name="title_mapdemo_detail">MapDemo Detail</string>
    <string name="navigate">Navigate</string>
    <string name="main_menu">Main Menu</string>
    <string name="basic_driving_app">Basic driving app</string>
    <string name="map">Maps</string>
    <string name="search">Search</string>
    <string name="routing">Routing</string>
    <string name="navigation">Navigation</string>
    <string name="offline_maps">Offline</string>
    <string name="map_demo_activity_title">Map display examples coming soon</string>
    <string name="navigation_activity_title">Starting navigation…</string>
    <string name="offline_demo_activity_title">Offline examples coming soon</string>
    <string name="routing_demo_activity_title">Routing examples coming soon</string>
    <string name="search_demo_activity_title">Search examples coming soon</string>
    <string name="route">Route</string>
    <string name="try_it_mapdemo">Try it</string>
    <string name="conf_map_title">Configurable Map</string>
    <string name="conf_map_description">Shows examples of base map styles and map detail layers that can be toggled on/off. \n\n<b>Features:</b> Light Driving, Light Browsing, Dark Driving, Dark Driving, Satellite and Monochrome map styles.
Road Network, 3D Buildings, Traffic Incidents, Hill Shading, House Numbers,  Traffic Flow, Vehicle Restrictions and Lane Highlighting.</string>
    <string name="go_back">Go back</string>
    <string name="descr_vector_map_image">Vector Map View</string>
    <string name="descr_play_icon_for_try_vector_map">Play Icon for Try Vector Map</string>
    <string name="map_ready">MAP READY</string>
    <string name="map_not_ready">MAP NOT READY</string>
    <string name="map_with_location">MAP WITH LOCATION</string>
    <string name="map_default_location">MAP DEFAULT LOCATION</string>
    <string name="map_mode_selection_title">Options</string>
    <string name="info">Info</string>
    <string name="offline">Offline</string>
    <string name="online">Online</string>
    <string name="map_mode">Map Mode</string>
    <string name="hybrid">Hybrid</string>
    <string name="next">Next</string>
    <string name="map_modes">Map Modes</string>
    <string name="online_description">You can browse any location and see live traffic and road incidents.</string>
    <string name="hybrid_description"><![CDATA[A combination of live & downloaded map data, which can be useful in locations that have intermittent internet access.]]></string>
    <string name="offline_description">Allows you to browse regions you’ve downloaded and view fixed road incidents, like speed cameras.</string>
    <string name="base_map_style_item_image_view_description">Base Map Style Item Image View</string>
    <string name="map_options">Map Options</string>
    <string name="bottom_dialog_title_options">Options</string>
    <string name="base_map_style_section_header">Base Map Style</string>
    <string name="map_details_section_header">Map Details</string>
    <string name="light_driving">Light Driving</string>
    <string name="light_browsing">Light Browsing</string>
    <string name="dark_browsing">Dark Browsing</string>
    <string name="satellite">Satellite</string>
    <string name="dark_driving">Dark Driving</string>
    <string name="hill_shading">Hill Shading</string>
    <string name="traffic_flow">Traffic Flow</string>
    <string name="vehicle_restriction">Vehicle Restriction</string>
    <string name="house_numbers">House Numbers</string>
    <string name="lane_highlighting">Lane Highlighting</string>
    <string name="monochrome">Monochrome</string>
    <string name="can_t_set_style">Can\'t set style</string>
    <string name="distance_along_the_route">Distance along the route: %s</string>
    <string name="remaining_travel_time">Remaining travel time: %s</string>
</resources>
