<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    tools:context=".MainMenu">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="729dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:height="80dp"
                android:focusable="false"
                android:fontFamily="casual"
                android:paddingTop="40dp"
                android:text="@string/main_menu"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp"
                app:lineHeight="20dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:height="90dp"
                android:backgroundTint="#2196F3"
                android:drawableLeft="@drawable/ic_tomtom_line_phone_app"
                android:drawableTint="#FFFEFE"
                android:onClick="launchBasicDriving"
                android:padding="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/basic_driving_app"
                android:textAlignment="textStart"
                app:cornerRadius="20dp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:padding="5dp"
                android:background="?android:attr/listDivider" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:height="90dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/ic_tomtom_map"
                android:drawableTint="#000000"
                android:foregroundTint="#00000000"
                android:onClick="launchMapDemo"
                android:text="@string/map"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/button14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:height="90dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/ic_tomtom_search"
                android:drawableTint="#000000"
                android:foregroundTint="#00000000"
                android:onClick="launchSearchDemo"
                android:text="@string/search"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:height="90dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@drawable/ic_tomtom_route"
                android:drawableTint="#000000"
                android:foregroundTint="#00000000"
                android:onClick="launchRoutingDemo"
                android:text="@string/routing"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchNavigationDemo"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:height="90dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@android:drawable/ic_menu_mylocation"
                android:drawableTint="#000000"
                android:foregroundTint="#00000000"
                android:text="@string/navigation"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                app:cornerRadius="20dp" />

            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="launchOfflineMapsDemo"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:height="90dp"
                android:backgroundTint="#FFFFFF"
                android:drawableLeft="@android:drawable/ic_menu_mylocation"
                android:drawableTint="#000000"
                android:foregroundTint="#00000000"
                android:text="@string/offline_maps"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                app:cornerRadius="20dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:srcCompat="@drawable/ic_tomtom_logo" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>